tests/fixtures/positive/licensing/RequiresOptInWithoutMessage.kt
package test

@RequiresOptIn
annotation class InternalApi
