tests/fixtures/negative/licensing/RequiresOptInWithoutMessage.kt
package test

@RequiresOptIn(message = "Internal API — subject to change.")
annotation class InternalApi
